# notenugget

./: CMakeLists.txt  README.md  main.cpp
ClassFolder/: CLIUI.cpp  CLIUI.h  Note.cpp  Note.h  NoteManager.cpp  NoteManager.h  TextNote.cpp  TextNote.h  ToDoNote.cpp  ToDoNote.h
txtFolder/: NuggetDose  NuggetDose.txt
